feat: enchance integrartion test